use relative ath to assets

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="/assets/app.js" ></script>
+    <script type="text/javascript" src="assets/app.js" ></script>
   </body>
 
 </html>
